--- a/templates/elevator.html
+++ b/templates/elevator.html
@@ -9,13 +9,7 @@
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center vh-100">
     <div class="container">
-        <div class="row">
-            <div class="col-8 building">
-                <div class="floor" style="top: 0;">Floor 3</div>
-                <div class="floor" style="top: 100px;">Floor 2</div>
-                <div class="floor" style="top: 200px;">Floor 1</div>
-                <div class="floor" style="top: 300px;">Ground Floor</div>
-            </div>
+        <div class="row justify-content-center">
             <div class="col-4 d-flex flex-column align-items-center">
                 <div class="elevator-container">
                     <div class="elevator">
