Texto de Pisos acomodados

--- a/templates/elevator.html
+++ b/templates/elevator.html
@@ -136,6 +136,15 @@
             font-size: 20px;
             margin-left: 5px;
         }
+
+        #PisoText {
+            position: absolute;
+            top: 5px;
+            left: 5px;
+            margin: 0;
+            font-size: 14px;
+            color: #ecf0f1;
+        }
     </style>
 </head>
 <body>
@@ -150,6 +159,7 @@
         </div>
 
         <div class="floor" id="floor10">
+            <h3 id="PisoText">Piso 10</h3>
             <div class="floor-display">10</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(10, 'down')">↓</button>
@@ -157,6 +167,7 @@
         </div>
 
         <div class="floor" id="floor9">
+            <h3 id="PisoText">Piso 9</h3>
             <div class="floor-display">9</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(9, 'up')">↑</button>
@@ -165,6 +176,7 @@
         </div>
 
         <div class="floor" id="floor8">
+            <h3 id="PisoText">Piso 8</h3>
             <div class="floor-display">8</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(8, 'up')">↑</button>
@@ -173,6 +185,7 @@
         </div>
 
         <div class="floor" id="floor7">
+            <h3 id="PisoText">Piso 7</h3>
             <div class="floor-display">7</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(7, 'up')">↑</button>
@@ -181,6 +194,7 @@
         </div>
 
         <div class="floor" id="floor6">
+            <h3 id="PisoText">Piso 6</h3>
             <div class="floor-display">6</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(6, 'up')">↑</button>
@@ -189,6 +203,7 @@
         </div>
 
         <div class="floor" id="floor5">
+            <h3 id="PisoText">Piso 5</h3>
             <div class="floor-display">5</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(5, 'up')">↑</button>
@@ -197,6 +212,7 @@
         </div>
 
         <div class="floor" id="floor4">
+            <h3 id="PisoText">Piso 4</h3>
             <div class="floor-display">4</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(4, 'up')">↑</button>
@@ -205,6 +221,7 @@
         </div>
 
         <div class="floor" id="floor3">
+            <h3 id="PisoText">Piso 3</h3>
             <div class="floor-display">3</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(3, 'up')">↑</button>
@@ -213,6 +230,7 @@
         </div>
 
         <div class="floor" id="floor2">
+            <h3 id="PisoText">Piso 2</h3>
             <div class="floor-display">2</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(2, 'up')">↑</button>
@@ -221,6 +239,7 @@
         </div>
 
         <div class="floor" id="floor1">
+            <h3 id="PisoText">Piso 1</h3>
             <div class="floor-display">1</div>
             <div class="call-buttons">
                 <button class="call-button" onclick="callElevator(1, 'up')">↑</button>
